--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet">
-    <title>React Router Page</title>
+    <title>Blog APP | React Router Page</title>
   </head>
-  <body>
+  <body className="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
